tests/snapshots/snapshots__budget_semver_classes_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4060 tokens)

comparator.js
     3→const ANY = Symbol('SemVer ANY')
     5→class Comparator {
     6→  static get ANY () {
     7→    return ANY
     8→  }
    10→  constructor (comp, options) {
    11→    options = parseOptions(options)
    12→
    13→    if (comp instanceof Comparator) {
    14→      if (comp.loose === !!options.loose) {
    15→        return comp
    16→      } else {
    17→        comp = comp.value
    18→      }
    19→    }
    20→
    21→    comp = comp.trim().split(/\s+/).join(' ')
    22→    debug('comparator', comp, options)
    23→    this.options = options
    24→    this.loose = !!options.loose
    25→    this.parse(comp)
    26→
    27→    if (this.semver === ANY) {
    28→      this.value = ''
    29→    } else {
    30→      this.value = this.operator + this.semver.version
    31→    }
    32→
    33→    debug('comp', this)
    34→  }
    36→  parse (comp) {
    37→    const r = this.options.loose ? re[t.COMPARATORLOOSE] : re[t.COMPARATOR]
    38→    const m = comp.match(r)
    39→
    40→    if (!m) {
    41→      throw new TypeError(`Invalid comparator: ${comp}`)
    42→    }
    43→
    44→    this.operator = m[1] !== undefined ? m[1] : ''
    45→    if (this.operator === '=') {
    46→      this.operator = ''
    47→    }
    48→
    49→    // if it literally is just '>' or '' then allow anything.
    50→    if (!m[2]) {
    51→      this.semver = ANY
    52→    } else {
    53→      this.semver = new SemVer(m[2], this.options.loose)
    54→    }
    55→  }
    57→  toString () {
    58→    return this.value
    59→  }
    61→  test (version) {
    62→    debug('Comparator.test', version, this.options.loose)
    63→
    64→    if (this.semver === ANY || version === ANY) {
    65→      return true
    66→    }
    67→
    68→    if (typeof version === 'string') {
    69→      try {
    70→        version = new SemVer(version, this.options)
    71→      } catch (er) {
    72→        return false
    73→      }
    74→    }
    75→
    76→    return cmp(version, this.operator, this.semver, this.options)
    77→  }
    79→  intersects (comp, options) {
    80→    if (!(comp instanceof Comparator)) {
    81→      throw new TypeError('a Comparator is required')
    82→    }
    83→
    84→    if (this.operator === '') {
    85→      if (this.value === '') {
    86→        return true
    87→      }
    88→      return new Range(comp.value, options).test(this.value)
    89→    } else if (comp.operator === '') {
    90→      if (comp.value === '') {
    91→        return true
    92→      }
    93→      return new Range(this.value, options).test(comp.semver)
    94→    }
    95→
    96→    options = parseOptions(options)
    97→
    98→    // Special cases where nothing can possibly be lower
    99→    if (options.includePrerelease &&
   100→      (this.value === '<0.0.0-0' || comp.value === '<0.0.0-0')) {
   101→      return false
   102→    }
   103→    if (!options.includePrerelease &&
   104→      (this.value.startsWith('<0.0.0') || comp.value.startsWith('<0.0.0'))) {
   105→      return false
   106→    }
   107→
   108→    // Same direction increasing (> or >=)
   109→    if (this.operator.startsWith('>') && comp.operator.startsWith('>')) {
   110→      return true
   111→    }
   112→    // Same direction decreasing (< or <=)
   113→    if (this.operator.startsWith('<') && comp.operator.startsWith('<')) {
   114→      return true
   115→    }
   116→    // same SemVer and both sides are inclusive (<= or >=)
   117→    if (
   118→      (this.semver.version === comp.semver.version) &&
   119→      this.operator.includes('=') && comp.operator.includes('=')) {
   120→      return true
   121→    }
   122→    // opposite directions less than
   123→    if (cmp(this.semver, '<', comp.semver, options) &&
   124→      this.operator.startsWith('>') && comp.operator.startsWith('<')) {
   125→      return true
   126→    }
   127→    // opposite directions greater than
   128→    if (cmp(this.semver, '>', comp.semver, options) &&
   129→      this.operator.startsWith('<') && comp.operator.startsWith('>')) {
   130→      return true
   131→    }
   132→    return false
   133→  }

range.js
     3→const SPACE_CHARACTERS = /\s+/g
     6→class Range {
     7→  constructor (range, options) {
     8→    options = parseOptions(options)
     9→
    10→    if (range instanceof Range) {
    11→      if (
    12→        range.loose === !!options.loose &&
    13→        range.includePrerelease === !!options.includePrerelease
    14→      ) {
    15→        return range
    16→      } else {
    17→        return new Range(range.raw, options)
    18→      }
    19→    }
      →    …
    73→  get range () {
    74→    if (this.formatted === undefined) {
    75→      this.formatted = ''
    76→      for (let i = 0; i < this.set.length; i++) {
    77→        if (i > 0) {
    78→          this.formatted += '||'
    79→        }
    80→        const comps = this.set[i]
    81→        for (let k = 0; k < comps.length; k++) {
    82→          if (k > 0) {
    83→            this.formatted += ' '
    84→          }
    85→          this.formatted += comps[k].toString().trim()
      →          …
    92→  format () {
    93→    return this.range
    94→  }
    96→  toString () {
    97→    return this.range
    98→  }
   100→  parseRange (range) {
   101→    // memoize range parsing for performance.
   102→    // this is a very hot path, and fully deterministic.
   103→    const memoOpts =
   104→      (this.options.includePrerelease && FLAG_INCLUDE_PRERELEASE) |
   105→      (this.options.loose && FLAG_LOOSE)
   106→    const memoKey = memoOpts + ':' + range
   107→    const cached = cache.get(memoKey)
   108→    if (cached) {
   109→      return cached
   110→    }
   111→
   112→    const loose = this.options.loose
      →    …
   170→  intersects (range, options) {
   171→    if (!(range instanceof Range)) {
   172→      throw new TypeError('a Range is required')
   173→    }
   174→
   175→    return this.set.some((thisComparators) => {
   176→      return (
   177→        isSatisfiable(thisComparators, options) &&
   178→        range.set.some((rangeComparators) => {
   179→          return (
   180→            isSatisfiable(rangeComparators, options) &&
   181→            thisComparators.every((thisComparator) => {
   182→              return rangeComparators.every((rangeComparator) => {
      →              …
   193→  test (version) {
   194→    if (!version) {
   195→      return false
   196→    }
   197→
   198→    if (typeof version === 'string') {
   199→      try {
   200→        version = new SemVer(version, this.options)
   201→      } catch (er) {
   202→        return false
   203→      }
   204→    }
   205→
      →…
   218→const cache = new LRU()
   233→const isNullSet = c => c.value === '<0.0.0-0'
   234→const isAny = c => c.value === ''
   238→const isSatisfiable = (comparators, options) => {
   239→  let result = true
      →  …
   257→const parseComparator = (comp, options) => {
   258→  comp = comp.replace(re[t.BUILD], '')
      →  …
   271→const isX = id => !id || id.toLowerCase() === 'x' || id === '*'
   280→const replaceTildes = (comp, options) => {
   281→  return comp
      →  …
   288→const replaceTilde = (comp, options) => {
   289→  const r = options.loose ? re[t.TILDELOOSE] : re[t.TILDE]
      →  …
   324→const replaceCarets = (comp, options) => {
   325→  return comp
      →  …
   332→const replaceCaret = (comp, options) => {
   333→  debug('caret', comp, options)
      →  …
   385→const replaceXRanges = (comp, options) => {
   386→  debug('replaceXRanges', comp, options)
      →  …
   393→const replaceXRange = (comp, options) => {
   394→  comp = comp.trim()
      →  …
   470→const replaceStars = (comp, options) => {
   471→  debug('replaceStars', comp, options)
      →  …
   478→const replaceGTE0 = (comp, options) => {
   479→  debug('replaceGTE0', comp, options)
      →  …
   491→const hyphenReplace = incPr => ($0,
   492→  from, fM, fm, fp, fpr, fb,
   493→  to, tM, tm, tp, tpr) => {
   494→  if (isX(fM)) {
      →  …
   523→const testSet = (set, version, options) => {
   524→  for (let i = 0; i < set.length; i++) {
      →  …

semver.js
     9→class SemVer {
    10→  constructor (version, options) {
    11→    options = parseOptions(options)
    12→
    13→    if (version instanceof SemVer) {
    14→      if (version.loose === !!options.loose &&
    15→        version.includePrerelease === !!options.includePrerelease) {
    16→        return version
    17→      } else {
    18→        version = version.version
    19→      }
    20→    } else if (typeof version !== 'string') {
    21→      throw new TypeError(`Invalid version. Must be a string. Got type "${typeof version}".`)
    22→    }
    23→
    24→    if (version.length > MAX_LENGTH) {
    25→      throw new TypeError(
    26→        `version is longer than ${MAX_LENGTH} characters`
    27→      )
    28→    }
      →    …
    81→  format () {
    82→    this.version = `${this.major}.${this.minor}.${this.patch}`
    83→    if (this.prerelease.length) {
    84→      this.version += `-${this.prerelease.join('.')}`
    85→    }
    86→    return this.version
    87→  }
    89→  toString () {
    90→    return this.version
    91→  }
    93→  compare (other) {
    94→    debug('SemVer.compare', this.version, this.options, other)
    95→    if (!(other instanceof SemVer)) {
    96→      if (typeof other === 'string' && other === this.version) {
    97→        return 0
    98→      }
    99→      other = new SemVer(other, this.options)
   100→    }
   101→
   102→    if (other.version === this.version) {
   103→      return 0
   104→    }
   105→
   106→    return this.compareMain(other) || this.comparePre(other)
   107→  }
   109→  compareMain (other) {
   110→    if (!(other instanceof SemVer)) {
   111→      other = new SemVer(other, this.options)
   112→    }
   113→
   114→    if (this.major < other.major) {
   115→      return -1
   116→    }
   117→    if (this.major > other.major) {
   118→      return 1
   119→    }
   120→    if (this.minor < other.minor) {
   121→      return -1
   122→    }
   123→    if (this.minor > other.minor) {
   124→      return 1
   125→    }
   126→    if (this.patch < other.patch) {
   127→      return -1
      →      …
   135→  comparePre (other) {
   136→    if (!(other instanceof SemVer)) {
   137→      other = new SemVer(other, this.options)
   138→    }
   139→
   140→    // NOT having a prerelease is > having one
   141→    if (this.prerelease.length && !other.prerelease.length) {
   142→      return -1
   143→    } else if (!this.prerelease.length && other.prerelease.length) {
   144→      return 1
   145→    } else if (!this.prerelease.length && !other.prerelease.length) {
   146→      return 0
   147→    }
   148→
   149→    let i = 0
   150→    do {
   151→      const a = this.prerelease[i]
   152→      const b = other.prerelease[i]
   153→      debug('prerelease compare', i, a, b)
      →      …
   168→  compareBuild (other) {
   169→    if (!(other instanceof SemVer)) {
   170→      other = new SemVer(other, this.options)
   171→    }
   172→
   173→    let i = 0
   174→    do {
   175→      const a = this.build[i]
   176→      const b = other.build[i]
   177→      debug('build compare', i, a, b)
   178→      if (a === undefined && b === undefined) {
   179→        return 0
   180→      } else if (b === undefined) {
   181→        return 1
   182→      } else if (a === undefined) {
   183→        return -1
   184→      } else if (a === b) {
   185→        continue
   186→      } else {
      →      …
   194→  inc (release, identifier, identifierBase) {
   195→    if (release.startsWith('pre')) {
   196→      if (!identifier && identifierBase === false) {
   197→        throw new Error('invalid increment argument: identifier is empty')
   198→      }
   199→      // Avoid an invalid semver results
   200→      if (identifier) {
   201→        const match = `-${identifier}`.match(this.options.loose ? re[t.PRERELEASELOOSE] : re[t.PRERELEASE])
   202→        if (!match || match[1] !== identifier) {
   203→          throw new Error(`invalid identifier: ${identifier}`)
   204→        }
   205→      }
   206→    }
   207→
   208→    switch (release) {
   209→      case 'premajor':
   210→        this.prerelease.length = 0
   211→        this.patch = 0
   212→        this.minor = 0
      →        …
