tests/snapshots/snapshots__budget_semver_classes_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (425 tokens)

comparator.js
     3→const ANY = Symbol('SemVer ANY')
     5→class Comparator {
     6→  static get ANY () {
    10→  constructor (comp, options) {
    36→  parse (comp) {
    57→  toString () {
    61→  test (version) {
    79→  intersects (comp, options) {

range.js
     3→const SPACE_CHARACTERS = /\s+/g
     6→class Range {
     7→  constructor (range, options) {
    73→  get range () {
    92→  format () {
    96→  toString () {
   100→  parseRange (range) {
   170→  intersects (range, options) {
   193→  test (version) {
   218→const cache = new LRU()
   233→const isNullSet …
   234→const isAny …
   238→const isSatisfiable …
   257→const parseComparator …
   271→const isX …
   280→const replaceTildes …
   288→const replaceTilde …
   324→const replaceCarets …
   332→const replaceCaret …
   385→const replaceXRanges …
   393→const replaceXRange …
   470→const replaceStars …
   478→const replaceGTE0 …
   491→const hyphenReplace …
   523→const testSet …

semver.js
     9→class SemVer {
    10→  constructor (version, options) {
    81→  format () {
    89→  toString () {
    93→  compare (other) {
   109→  compareMain (other) {
   135→  comparePre (other) {
   168→  compareBuild (other) {
   194→  inc (release, identifier, identifierBase) {
